Use the new KTK 1.3 API